--- a/educational_app/pubspec.yaml
+++ b/educational_app/pubspec.yaml
@@ -61,7 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/button_back.svg
+    # Images for home page
     - assets/images/bear_games.png
+    - assets/images/bear_home.png
     # Icons for navigation bar
     - assets/navigation_icons/Home.svg
     - assets/navigation_icons/Joystick.svg
