--- a/educational_app/pubspec.yaml
+++ b/educational_app/pubspec.yaml
@@ -45,7 +45,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,6 +73,11 @@ flutter:
     - assets/images/logic_problem1.svg
     - assets/images/logic_problem2.svg
     - assets/images/logic_problem3.svg
+    # Shape images for logic answers
+    - assets/images/circle.svg
+    - assets/images/square.svg
+    - assets/images/triangle.svg
+    - assets/images/star.svg
 
 
   #   - images/a_dot_ham.jpeg
