I added routing between all the pages except Memory game. Also, started working on Settings page

--- a/educational_app/pubspec.yaml
+++ b/educational_app/pubspec.yaml
@@ -82,6 +82,8 @@ flutter:
     - assets/icons/Math.svg
     - assets/icons/Brain.svg
     - assets/icons/Bulb.svg
+    # Image for Settings Page
+    - assets/images/honeycomb.png
     
 
 
