--- a/educational_app/pubspec.yaml
+++ b/educational_app/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  audioplayers: ^6.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -84,6 +86,9 @@ flutter:
     - assets/icons/Bulb.svg
     # Image for Settings Page
     - assets/images/honeycomb.png
+    # Icons for Settings Page
+    - assets/icons/music.svg
+    - assets/icons/sound.svg
     
 
 
