--- a/educational_app/pubspec.yaml
+++ b/educational_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   
   audioplayers: ^6.5.1
+  flutter_flip_card: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -91,7 +92,8 @@ flutter:
     - assets/icons/sound.svg
     # Image for Progress Page
     - assets/images/badge.png
-    
+    # Images for Memory Game
+    - assets/images/card_front.png
 
 
 
