I finished memory game with randomly generated cards and end game screen

--- a/educational_app/pubspec.yaml
+++ b/educational_app/pubspec.yaml
@@ -94,6 +94,13 @@ flutter:
     - assets/images/badge.png
     # Images for Memory Game
     - assets/images/card_front.png
+    # Fruits for Memory Game
+    - assets/images/blackberry.png
+    - assets/images/blueberry.png
+    - assets/images/cherries.png
+    - assets/images/grape.png
+    - assets/images/raspberry.png
+    - assets/images/strawberry.png
 
 
 
